syntax = "proto3";

package pdequipt;

service PdEquiptService {
  rpc searchAssetEquipt (PdEquipQuerySearchRequest) returns (Response);
  rpc getToolQuery (PdToolQueryRequest) returns (Response);
  rpc getToolAssyQuery (PdToolAssyQueryRequest) returns (Response);
  rpc getToolRepairQuery (PdToolRepairQueryRequest) returns (Response);
  rpc getUserDefineQuery (PdToolUserDefineQueryRequest) returns (Response);
  rpc createOrUpdatePdEquip (PdEquipAssyToolRequest) returns (Response);
  rpc deleteMold (PdAssyToolRequest) returns (Response);
  rpc deletePdEquip (PdEquipAssyToolRequest) returns (Response);

}

message Result { 
  string ToolName = 1;
  string ToolNo = 2;
  string Spec = 3;
  int32 SMStatus = 4;
  int32 UmToolKind = 5;
  int32 EmpSeq = 6;
  string PUCustSeq = 7;
  string InstallArea = 8;
  int32 DeptSeq = 9;
  string AsstName = 10;
  string AsstNo = 11;

}

message ToolQueryRequest { 
  string ToolName = 1;
  string ToolNo = 2;
  string Spec = 3;
  int32 SMStatus = 4;
  int32 UmToolKind = 5;
  int32 EmpSeq = 6;
  string PUCustSeq = 7;
  string InstallArea = 8;
  int32 DeptSeq = 9;
  string AsstName = 10;
  string AsstNo = 11;
  int32 ToolSeq = 12;

}

message ToolAssyQueryRequest { 
  string ToolName = 1;
  string ToolNo = 2;
  string Spec = 3;
  int32 SMStatus = 4;
  int32 UmToolKind = 5;
  int32 EmpSeq = 6;
  string PUCustSeq = 7;
  string InstallArea = 8;
  int32 DeptSeq = 9;
  string AsstName = 10;
  string AsstNo = 11;
  int32 ToolSeq = 12;

}

message ToolRepairQueryRequest { 
  string ToolName = 1;
  string ToolNo = 2;
  string Spec = 3;
  int32 SMStatus = 4;
  int32 UmToolKind = 5;
  int32 EmpSeq = 6;
  string PUCustSeq = 7;
  string InstallArea = 8;
  int32 DeptSeq = 9;
  string AsstName = 10;
  string AsstNo = 11;
  int32 ToolSeq = 12;
  string EmpName = 13;

}

message ToolUserDefineQueryRequest {
  int32 ToolSeq = 12;

}

message PdEquipRequest { 
  string ToolName = 1;
  string ToolNo = 2;
  string Spec = 3;
  int32 SMStatus = 4;
  int32 UMToolKind = 5;
  int32 EmpSeq = 6;
  string PUCustSeq = 7;
  string InstallArea = 8;
  int32 DeptSeq = 9;
  string AsstName = 10;
  string AsstNo = 11;
  int32 ToolSeq = 12;
  string EmpName = 13;
  string UmToolKindName = 14;
  string MoveEmpName = 15;
  string DeptName = 16;
  string Remark = 17;
  bool IsMold = 18;
  int32 AsstSeq = 19;
  string SerialNo = 20;
  string NationName = 21;
  string ManuCompnay = 22;
  string PUCustName = 23;
  string BuyDate = 24;
  string Uses = 25;
  int32 BuyCost = 26;
  string Forms = 27;
  string BuyCustTel = 28;
  string Capacity = 29;
  string ASTelNo = 30;
  string Cavity = 31;
  string MoldCount = 32;
  string DesignShot = 33;
  string OrderCustName = 34;
  string InitialShot = 35;
  string CustShareRate = 36;
  string WorkShot = 37;
  string ProdSrtDate = 38;
  string TotalShot = 39;
  string DisuseDate = 40;
  string ModifyShot = 41;
  string DisuseCustName = 42;
  string ModifyDate = 43;
  string WorkingTag = 44;
  int32 AssetSeq = 45;
  int32 NationSeq = 46;
}


message ToolAssyRequest { 
  string ItemSeq = 1;
  string ItemName = 2;
  string ItemNo = 3;
  string Spec = 4;
  int32 ToolSeq = 5;
  string Status = 6;
  string WorkingTag = 7;
  int32 IdxNo = 8;
  string UnitName = 9;

}

message ToolInfoDefineRequest { 
  string WorkingTag = 1;
  int32 IdxNo = 2;
  int32 DataSeq = 3;
  int32 MngSerl = 4;
  string MngName = 5;
  string MngValName = 6;
  string MngValSeq = 7;
  string SMInputType = 8;
  int32 CodeHelpSeq = 9;
  bool IsNON = 10;
  int32 ToolSeq = 11;

}

message PdEquipQuerySearchRequest {
  repeated Result result = 1;  
  map<string, string> metadata = 2;
}

message PdToolQueryRequest {
  repeated ToolQueryRequest result = 1;  
  map<string, string> metadata = 2;
}

message PdToolAssyQueryRequest {
  repeated ToolAssyQueryRequest result = 1;  
  map<string, string> metadata = 2;
}

message PdToolRepairQueryRequest {
  repeated ToolRepairQueryRequest result = 1;  
  map<string, string> metadata = 2;
}

message PdToolUserDefineQueryRequest {
  repeated ToolUserDefineQueryRequest result = 1;  
  map<string, string> metadata = 2;
}

message PdEquipAssyToolRequest {
  repeated PdEquipRequest dataPdEquip = 1;  
  repeated ToolAssyRequest dataAssyTool = 2;  
  repeated ToolInfoDefineRequest dataMng = 3;  
  map<string, string> metadata = 4;
}

message PdAssyToolRequest {
  repeated ToolAssyQueryRequest dataMold = 1;  
  map<string, string> metadata = 4;
}


message Response {
  bool status = 1;  
  string message = 2;      
  string data = 3; 
  string errors = 4;
}
